--- a/.github/workflows/meinErsterWorkflow.yml
+++ b/.github/workflows/meinErsterWorkflow.yml
@@ -2,7 +2,8 @@ name: meimErsterWorkflow
 
 on:
   push:
-  pull_request:
+    branches:
+      - main
 
 jobs:
   changed-job:
@@ -12,6 +13,30 @@ jobs:
         run: echo "Hallo Welt!"
       - name: Abschied
         run: echo "Bye Bye!"
+
+  zweiter-job:
+    runs-on: ubuntu-latest
+    needs: changed-job
+    steps:
+      - name: Datum anzeigen
+        run: date
+
+
+# Aufgabe1 hinzufügen von Job2 echo Bay Bay
+#name: meimErsterWorkflow
+
+#on:
+ # push:
+  #pull_request:
+
+#jobs:
+ # changed-job:
+  #  runs-on: ubuntu-latest
+   # steps:
+    #  - name: meinErsterStep
+     #   run: echo "Hallo Welt!"
+      #- name: Abschied
+       # run: echo "Bye Bye!"
 
       
 
